fixed spacing

--- a/style.css
+++ b/style.css
@@ -182,7 +182,6 @@ nav {
 .experience-section p {
     font-weight: 300;
     line-height: 2rem;
-    text-align: justify;
     font-size: 1.1rem;
 }
 
